# geometry

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  makefile
src/: area.c  area.h  check.c  check.h  crossing.c  crossing.h  fname.c  fname.h  main.c  perimeter.c  perimeter.h
test/: tests.c
